# orchestrate

./: .gitignore  .gitmodules  README.md  handoff.md  pyproject.toml  skills-lock.json
.agents/skills/orchestrate/: SKILL.md
api/: server.py
docs/: api.md
docs/superpowers/plans/: 2026-03-26-orchestrate-implementation.md  2026-03-26-orchestrate-skill.md  2026-03-27-api-first-refactor.md  2026-03-27-queue-based-streaming.md  2026-03-27-remind-ui-integration.md  2026-03-28-team-sse-stream.md  2026-03-30-kanban-task-view.md
docs/superpowers/specs/: 2026-03-26-orchestrate-design.md  2026-03-26-orchestrate-skill-design.md  2026-03-27-api-first-refactor-design.md  2026-03-27-multi-agent-visibility-design.md  2026-03-27-queue-based-streaming-design.md  2026-03-27-remind-ui-integration-design.md  2026-03-28-team-sse-stream-design.md  2026-03-30-context-sdk-integration-design.md  2026-03-30-kanban-ui-design.md
examples/: e2e_oauth.py  hello.py  multi_agent.py  schema_test.py
orchestrate/: __init__.py  core.py  state.py
orchestrate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
skills/orchestrate/: SKILL.md
src/orchestrate/: __init__.py  cli.py  core.py  state.py
src/orchestrate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/orchestrate/api/: server.py
tests/: test_api.py  test_cli.py  test_cli_integration.py  test_core.py  test_parse.py  test_remind_integration.py  test_state.py
ui/: package.json  pnpm-lock.yaml
ui/.next/: trace
ui/src/: store.ts
ui/src/api/: os.ts  routes.ts
ui/src/app/: page.tsx
ui/src/types/: kanban.ts  (+1 more)
(+18 files in other folders)
