[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrate"
version = "0.1.0"
description = "Agent SDK-based orchestration library"
requires-python = ">=3.10"
dependencies = [
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
api = ["claude-agent-sdk", "fastapi", "uvicorn[standard]", "python-multipart"]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
